# circularapps

./: CHANGELOG.md  README.md  circularapps.cabal  circularapps.cabal.save0
app/: Main.hs  cctv_materials_recognition.py  circular.hs  circularproduct.txt  circularproductregistered.txt  dNFT.hs  ut_materials_recognition.py
circularApp/: LICENSE  README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: circularapps-0.1.0.0-inplace.conf  package.cache
