cabal-version:      2.4
name:               circularapps
version:            0.1.0.0
-- A short (one-line) Description of the Package :
-- synopsis: PRODUCT CIRCULAR ECONOMY TRACKING & ReSOLVE RECOMMENDER MANAGEMENT SYSTEM
-- Developer : Sonny Dhamayana, ST PGAIDL PG Cloud Computing Cert Dipl Blockchain Technology Development
-- A Longer Description of the Package :
-- Description: Circular Product/ Asset Tracking and Recommender System is Application to Tracked
-- Product/ Asset as part circular economy sustainability strategy.
-- Circular Asset Main Database which contains of Circular Asset Category, Asset Materials Characteristic, 
-- and Probabability Recommended Circular Strategy will be saved in "circularproductdb.csv" file
-- Meanwhile as Targeted Product/ Asset  will feed through manual data entry or through Output Insight from 
-- IoT-AI Classification Models.  And  further will be saved in "productobservation.csv" file.
-- Product Observation file contain of Product ID, Material Observation Characteristic, and Date of Registered
-- Further Application will check, evaluate and validate the product/ asset  with Circular Asset Main Database
-- to identify the Recommended Sustainability Circular Strategy
-- Future ongoing works : Integration with IPFS-Inter Planetary File System, 
--                        Integration with Live Stream IoT-CCTV Live Images  based AI Material Classification Model,
--                        Integration with Live Stream IoT-UT Scanner based AI Material Classification Model,
--                        Front End Development in Web3/ Android/ IOS, 
--                        Integration with Carbon Emission Equivalency Package

-- A URL where users can report bugs.
-- bug-reports: Bugs report could send through github comments or email sonny.dhamayana@gmail.com

-- The license under which the package is released.
-- license: MIT

-- The package author(s).
-- author: Sonny Dhamayana, ST PGAIDL PG Cloud Computing PG Digital Marketing Dipl. in Blockchain Technology Development

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: sonny.dhamayana@gmail.com

-- A copyright notice.
-- copyright: 
-- category : Circular Economy 
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, time ^>=1.11.1.1, ansi-terminal ^>=0.11.3
    hs-source-dirs:   src
    default-language: Haskell2010

executable circularapps
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0, time ^>=1.11.1.1, ansi-terminal ^>=0.11.3,
        circularapps

    hs-source-dirs:   app
    default-language: Haskell2010
